--- a/website/templates/movies.html
+++ b/website/templates/movies.html
@@ -5,8 +5,7 @@
 {% block content %}
 <style>
     body {
-        background-color: #141414;
-        color: white;
+        background-color: white;
     }
     .search-bar {
         margin-bottom: 20px;
@@ -46,7 +45,6 @@
         margin-top: 20px;
     }
     .pagination a {
-        color: #E50914;
         text-decoration: none;
     }
 </style>
@@ -70,11 +68,11 @@
 
     <div class="pagination">
         {% if current_page > 1 %}
-        <a href="{{ url_for('views.movies', page=current_page-1) }}">Previous</a>
+        <a href="{{ url_for('views.movies', page=current_page-1) }}"> Previous </a>
         {% endif %}
         <span>Page {{ current_page }} of {{ total_pages }}</span>
         {% if current_page < total_pages %}
-        <a href="{{ url_for('views.movies', page=current_page+1) }}">Next</a>
+        <a href="{{ url_for('views.movies', page=current_page+1) }}"> Next </a>
         {% endif %}
     </div>
 </div>
